# third-python-package

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: main.yml
src/third_python_package/: harmonic_mean.pyi  harmonic_mean.pyx  harmony.py  hello.py  slow_harmonic_mean.py
tests/: test_harmonic_mean.py
