[metadata]
name = third-python-package
version = 0.0.1
description = This package does amazing things.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tpotjj/third-python-package
author = Joris Jansen
author_email = "Joris Jansen" <github@tpotjj.com>
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    termcolor>=2.3.0,<3

[options.packages.find]
where = src
exclude =
    tests*

[options.entry_points]
console_scripts =
    harmony = third_python_package.harmony:main

######################
# Tool configuration #
######################
[mypy]
python_version = 3.11
check_untyped_defs = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_unused_configs = True
namespace_packages = True
explicit_package_bases = True
show_error_codes = True
show_error_context = True
pretty = True
strict = True

[flake8]
max-line-length = 88

[isort]
profile = black
line_length = 88

[tool:pytest]
testpaths = tests
addopts = --cov --strict-markers
xfail_strict = True

[coverage:run]
source = third_python_package
branch = True

[coverage:report]
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src/third_python_package
    */site-packages/third_python_package

[tox:tox]
envlist = py310,py311
isolated_build = True

[testenv]
deps =
    pytest
    pytest-cov
    pytest-randomly
commands =
    pytest {posargs}

[testenv:typecheck]
deps =
    mypy
    pytest
    types-termcolor
commands =
    mypy --ignore-missing-imports {posargs:src tests}

[testenv:format]
skip_install = True
deps =
    black
commands =
    black {posargs: src tests}

[testenv:lint]
skip_install = True
deps =
    flake8
    flake8-bugbear
commands =
    flake8 {posargs:src tests}

[testenv:sort]
skip_install: True
deps=
    isort
commands = 
    isort {postargs: .}